# ThreeBodyProblem

./: .gitignore  README.md  app.py  elems.py  gravity.pyxres  grid.py  main.py  maths_local.py  pyproject.toml  settings.py  simulation.py  text.py  ui.py  user_inputs.py
assets/: gravity.pyxres
gravity/: main.py
gravity/modules/: app.py  camera.py  collisions.py  grid.py  paths.py  settings.py  simulation.py  text.py  ui.py  writter.py
gravity/src/: main.py
gravity/src/modules/: drawing.py  element.py  maths_local.py  ui.py  writter.py
logs/: README.md
modules/: maths_local.py  settings.py  writter.py
src/gravity/: __main__.py
src/gravity/app/: __init__.py  game.py  simulation.py  support.py  text.py  ui.py
src/gravity/modules/: __init__.py  console.py  defaults.py  grid.py  settings.py  types.py  writter.py
src/gravity/physics/: collisions.py  element.py  maths.py  trails.py
src/gravity_detroix23/: __init__.py  __main__.py
src/gravity_detroix23/app/: app.py  board.py  controls.py  drawing.py  game.py  inputs.py  simulation.py  support.py  text.py  ui.py
src/gravity_detroix23/inputs/: __init__.py  keyboard.py  mouse.py
src/gravity_detroix23/modules/: console.py  defaults.py  paths.py  settings.py  types.py  writter.py
src/gravity_detroix23/physics/: __init__.py  collisions.py  element.py  grid.py  maths.py  trails.py
src/tree_body_problem_detroix23.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
